# cottas-rs

./: .zenodo.json  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: auto-close-add-solved.yml
cottas-rs/: Cargo.toml
cottas-rs/src/: main.rs
src/: duckdb.rs  export.rs  lib.rs  main.rs  parser.rs  utils.rs
tests/: cottas_rs_test.rs
tests/data/: example.cottas  example2.ttl  example3.ttl  merged.cottas  output.cottas  output.rdf
