[package]
name = "cottas-rs"
version = "0.1.0"
edition = "2021"
authors = [
    "Stephanya Casanova Marroquin <stephanya.casanova@gmail.com>",
    "Julián Arenas-Guerrero <julian.arenas.guerrero@upm.es>"
]
description = "cottas-rs is a library for working with compressed RDF files in the COTTAS format. COTTAS stores triples as a triple table in Apache Parquet. It is built on top of DuckDB and provides an HDT-like interface."
categories = ["database", "data-structures", "parsing"]
keywords = ["rdf", "parquet", "duckdb", "cottas"]
license = "Apache-2.0. See LICENSE file for details."
repository = "https://github.com/cottas-rdf/cottas-rs"
readme = "README.md"
rust-version = "1.91.1"

[dependencies]
duckdb = { version = "1.4.2", features = ["bundled"] }
oxrdf = "0.3.1"
oxrdfio = "0.2.1"
polars = { version = "0.52", features = ["parquet"] }
tempfile = "3.6"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
clap = { version = "4.5.23", features = ["derive"] }